# 3D_model_slicing

./: CMakeLists.txt  LICENSE  README.md
include/: cutter.h  executor.h  figure.h  geom.h  geom_utils.h  happly.h  integration.h  interesting.h  parametrizedFigure.h  parser.h  ply.h  uv_atlas.h
source/: cutter.cpp  executor.cpp  figure.cpp  geom.cpp  geom_utils.cpp  interesting.cpp  main.cpp  parameterizedFigure.cpp  parser.cpp  ply.cpp
